# oaipmh

./: .coveragerc  README.md  main.py  mypy.ini  pyproject.toml
.github/workflows/: python-app.yml
cicd/: Dockerfile  cloudbuild-develop.yaml  cloudbuild.yaml
oaipmh/: __init__.py  config.py  factory.py  routes.py
oaipmh/data/: oai_config.py  oai_errors.py  oai_properties.py
oaipmh/processors/: create_set_list.py  db.py  fetch_list.py  get_record.py  resume.py
oaipmh/requests/: data_queries.py  info_queries.py  param_processing.py  routes.py  verb_sorter.py
oaipmh/serializers/: create_records.py  output_formats.py
oaipmh/templates/: base.xml  errors.xml  get_record.xml  identify.xml  list_identifiers.xml  list_records.xml  macros.html  macros.xml  metaformats.xml  record_formats.xml  setSpec.xml  token.xml
tests/: conftest.py  test_basic.py  test_create_record.py  test_formatting.py  test_get_list_data.py  test_get_record.py  test_identify.py  test_list_data.py  test_list_indentifiers.py  test_list_meta_formats.py  test_list_records.py  test_list_sets.py  test_param_process.py  test_record_format.py  test_serve_schema.py  test_token.py  test_verb_sorting.py
tests/data/: browse.db
tests/inputs/: test_get_record.py
